[tool.poetry]
name = "dj-stripe.github.io"
version = "2.8.0-dev.0"
description = "Django + Stripe made easy"
license = "MIT"
authors = [
    "Alexander Kavanaugh <alex@kavdev.io>",
    "Jerome Leclanche <jerome@leclan.ch>",
]
readme = "README.md"
homepage = "https://dj-stripe.dev"
repository = "https://github.com/dj-stripe/dj-stripe.github.io"

[tool.poetry.dependencies]
python = "^3.8.0"
dj-stripe = { "path" = "dj-stripe/", develop = true }

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.3.1"
mkdocs-material = ">=8.4.2"
mkdocs-autorefs = ">=0.4.1"
mkdocstrings = { extras = ["python"], version = ">=0.19.0" }
mike = ">=1.1.2"
jinja2 = "<3.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry_core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
